--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
 </head>
 <body class="bg-dark text-light">
-  <div class="sidebar d-flex flex-column">
-    <div class="pt-3 flex-grow-1">
-      <ul class="nav flex-column">
+  <div class="sidebar d-flex flex-column align-items-center">
+    <div class="flex-grow-1">
+      <ul class="nav flex-column text-center">
         <li class="nav-item">
           <a class="nav-link active" href="#" data-section="convert">
-            Convert Images
+            <i class="bi bi-arrow-repeat"></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" data-section="resize">
-            Resize Images
+            <i class="bi bi-aspect-ratio"></i>
           </a>
         </li>
       </ul>
     </div>
-    <div class="mt-auto p-3">
-      <ul class="nav flex-column">
+    <div>
+      <ul class="nav flex-column text-center">
         <li class="nav-item">
           <a class="nav-link" href="#" data-section="settings">
-            Settings
+            <i class="bi bi-gear"></i>
           </a>
         </li>
       </ul>
