--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css">
 </head>
 <body class="bg-dark text-light">
   <div class="sidebar d-flex flex-column align-items-center">
@@ -20,6 +21,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#" data-section="resize">
             <i class="bi bi-aspect-ratio"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-section="crop">
+            <i class="bi bi-crop"></i>
           </a>
         </li>
       </ul>
@@ -146,6 +152,38 @@
           </div>
         </div>
       </div>
+      <div id="crop-section" class="section">
+        <h1 class="mt-5">Crop Images</h1>
+        <div class="mb-3">
+          <button id="select-crop-files" class="btn btn-primary">Select Files</button>
+        </div>
+        <ul id="crop-file-list" class="list-group mb-3"></ul>
+        <div id="crop-image-info" class="card mb-3" style="display: none;">
+          <div class="card-body">
+            <h5 class="card-title">Original Image Info:</h5>
+            <p id="crop-image-dimensions">Dimensions: </p>
+            <p id="crop-image-size">Size: </p>
+            <div class="crop-container">
+              <img id="crop-image-preview" src="" alt="Image Preview" style="max-width: 100%;">
+            </div>
+          </div>
+        </div>
+        <div id="crop-options" class="mt-3" style="display: none;">
+          <button id="crop-button" class="btn btn-success">Crop</button>
+        </div>
+        <div id="crop-preview" class="mt-3" style="display: none;">
+          <h5 id="crop-preview-text">Cropped Image Preview:</h5>
+          <img id="cropped-image-preview" src="" alt="Cropped Image Preview" style="max-width: 100%;">
+          <p id="cropped-image-dimensions">New Dimensions: </p>
+          <button id="save-cropped-button" class="btn btn-primary mt-3">Save Cropped Image</button>
+          <div class="d-flex align-items-center mt-3">
+            <span id="cropped-image-saved-path" class="text-success ms-3" style="display: none;">Image Saved: <span id="saved-cropped-image-path"></span></span>
+            <button id="open-cropped-save-path-button" class="btn btn-secondary btn-sm ms-3" style="display: none;">
+              <i class="bi bi-folder-fill text-warning"></i>
+            </button>
+          </div>
+        </div>
+      </div>
       <div id="settings-section" class="section">
         <h1 class="mt-5">Settings</h1>
         <div class="mb-3">
@@ -169,5 +207,6 @@
     </main>
   </div>
   <script src="renderer.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 </body>
 </html>
