--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Converter</title>
+  <title>Fixelate Pro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
@@ -154,8 +154,9 @@
       </div>
       <div id="crop-section" class="section">
         <h1 class="mt-5">Crop Images</h1>
-        <div class="mb-3">
-          <button id="select-crop-files" class="btn btn-primary">Select Files</button>
+        <div class="mb-3 d-flex">
+          <button id="select-crop-files" class="btn btn-primary me-2">Select Image</button>
+          <button id="clear-crop-files" class="btn btn-danger" style="display: none;">Clear</button>
         </div>
         <ul id="crop-file-list" class="list-group mb-3"></ul>
         <div id="crop-image-info" class="card mb-3" style="display: none;">
